--- a/capstone-client/src/styles/partials/_mixins.scss
+++ b/capstone-client/src/styles/partials/_mixins.scss
@@ -1,14 +1,19 @@
-@use './variables.scss' as *;
+@use "./variables.scss" as *;
 
 @mixin tablet {
-    @media screen and (min-width: $tablet-breakpoint) {
-      @content;
-    }
+  @media screen and (min-width: $tablet-breakpoint) {
+    @content;
   }
-  
-  @mixin desktop {
-    @media screen and (min-width: $desktop-breakpoint) {
-      @content;
-    }
-  }
+}
 
+@mixin desktop {
+  @media screen and (min-width: $desktop-breakpoint) {
+    @content;
+  }
+}
+
+@mixin remove-link-styling {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+}
