set color variables

--- a/capstone-client/src/styles/partials/_variables.scss
+++ b/capstone-client/src/styles/partials/_variables.scss
@@ -1,3 +1,6 @@
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
 
+$border-color: #609f60;
+$lighter-background: #c6ecd6;
+$darker-background: #9fc69f;
