--- a/capstone-client/src/styles/partials/_variables.scss
+++ b/capstone-client/src/styles/partials/_variables.scss
@@ -1,6 +1,10 @@
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
 
-$border-color: #609f60;
-$lighter-background: #c6ecd6;
-$darker-background: #9fc69f;
+//green
+$border-greencolor: #609f60;
+$lighter-greenbackground: #c6ecd6;
+$darker-greenbackground: #9fc69f;
+
+//yellow
+$lighter-yellowbackground:  #fffacd;
