revise footer styling

--- a/capstone-client/src/components/Footer/Footer.scss
+++ b/capstone-client/src/components/Footer/Footer.scss
@@ -26,6 +26,7 @@
                 @include remove-link-styling;
                 text-decoration: underline;
                 cursor: pointer;
+                color: #264040;
             }
         }
 
