--- a/capstone-client/src/components/ItemsDisplay/ItemsDisplay.scss
+++ b/capstone-client/src/components/ItemsDisplay/ItemsDisplay.scss
@@ -24,6 +24,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 0.5rem;
+
+    &:hover {
+      background-color: #f5e6d6;
+      border: solid #8fbc8f;
+      border-width: 1rem;
+    }
     &-nickname {
         margin: 1rem;
         font-size: 2.5rem;
